--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -10,9 +10,9 @@
         %span.behind Behind Schedule
   %h2
     - if release.deadline
-      = "Due #{release.deadline.to_s(:default)} &mdash; ".html_safe
+      = "Due #{release.deadline.to_s(:default)}".html_safe
     - if release.accepted_at  
-      = "Accepted #{release.accepted_at}".html_safe
-    - else
-      = "Estimated #{release.estimated_finish}".html_safe
+      = " &mdash; Accepted #{release.accepted_at}".html_safe
+    - elsif !ENV['HIDE_ESTIMATES']
+      = " &mdash; Estimated #{release.estimated_finish}".html_safe
   = RedCloth.new(release.description).to_html.html_safe
