--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -25,6 +25,8 @@ body
     color: #000
     padding-bottom: 5px
     border-bottom: 3px solid #666
+    .small
+      font-size: 14px
 
 #options
   float: right
