--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,3 @@
-!!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
   %title= "#{ENV["PRODUCT_NAME"] || "Product"} Roadmap"
@@ -18,7 +17,10 @@
         - else
           Upcoming
           = link_to "All", :all => "true"
-      %h1= "#{ENV["PRODUCT_NAME"] || "Product"} Roadmap"
+      %h1
+        = "#{ENV["PRODUCT_NAME"] || "Product"} Roadmap"
+        %span{:class => 'small'}= link_to "Home", :root
+        %span{:class => 'small'}= link_to "Workstreams", :workstream
     #content
       = yield
     #footer= (ENV["FOOTER"] || "Confidential").html_safe
