--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -31,29 +31,33 @@ body {
   padding-bottom: 5px;
   border-bottom: 3px solid #666666;
 }
+/* line 28, sass/screen.sass */
+#header h1 .small {
+  font-size: 14px;
+}
 
-/* line 29, sass/screen.sass */
+/* line 31, sass/screen.sass */
 #options {
   float: right;
   color: #333333;
   font-weight: bold;
 }
-/* line 33, sass/screen.sass */
+/* line 35, sass/screen.sass */
 #options a {
   color: #999999;
   text-decoration: none;
 }
-/* line 36, sass/screen.sass */
+/* line 38, sass/screen.sass */
 #options a:hover {
   color: black;
   text-decoration: underline !important;
 }
 
-/* line 41, sass/screen.sass */
+/* line 43, sass/screen.sass */
 #content h1 {
   margin-bottom: 0px;
 }
-/* line 43, sass/screen.sass */
+/* line 45, sass/screen.sass */
 #content h1 span {
   font-size: 12px;
   text-transform: uppercase;
@@ -61,46 +65,46 @@ body {
   position: relative;
   top: -4px;
 }
-/* line 49, sass/screen.sass */
+/* line 51, sass/screen.sass */
 #content h1 span.done {
   background-color: yellow;
 }
-/* line 51, sass/screen.sass */
+/* line 53, sass/screen.sass */
 #content h1 span.overdue {
   background-color: red;
   color: white;
 }
-/* line 54, sass/screen.sass */
+/* line 56, sass/screen.sass */
 #content h1 span.behind {
   background-color: orange;
   color: white;
 }
-/* line 57, sass/screen.sass */
+/* line 59, sass/screen.sass */
 #content h2 {
   color: #cccccc;
   margin-top: 0px;
 }
-/* line 60, sass/screen.sass */
+/* line 62, sass/screen.sass */
 #content .period {
   color: #888888;
   background-color: #eeeeee;
   padding: 4px;
 }
-/* line 64, sass/screen.sass */
+/* line 66, sass/screen.sass */
 #content .workstream {
   float: left;
   padding: 4px;
 }
-/* line 67, sass/screen.sass */
+/* line 69, sass/screen.sass */
 #content .workstream h1 {
   font-size: 22px;
 }
-/* line 69, sass/screen.sass */
+/* line 71, sass/screen.sass */
 #content .workstream h2 {
   font-size: 18px;
 }
 
-/* line 73, sass/screen.sass */
+/* line 75, sass/screen.sass */
 #footer {
   margin-top: 40px;
   color: #aaaaaa;
