--- a/app/views/main/workstream.html.haml
+++ b/app/views/main/workstream.html.haml
@@ -26,12 +26,30 @@
                 %span.done Done
               - elsif release.deadline
                 - if release.deadline < Time.now
-                  %span.overdue Overdue
+                  %span.overdue Past Goal
             %h2
               - if release.deadline
-                = "Due #{release.deadline.to_s(:default)}".html_safe
+                = "Goal #{release.deadline.to_s(:default)}".html_safe
               - if release.accepted_at  
                 = " &mdash; Accepted #{release.accepted_at}".html_safe
               - elsif !ENV['HIDE_ESTIMATES']
                 = " &mdash; Estimated #{release.estimated_finish}".html_safe
             = RedCloth.new(release.description).to_html.html_safe
+%div{:class=>'period'}
+  %h1
+    Prioritized Unscheduled
+%div{:class=>'workstreams clearfix'}
+  - @owners.each do |owner|
+    - owners_releases = @unscheduled_releases_by_owner[owner]
+    %div{:class=>'workstream', :style=>"width: #{@col_size}px"  }
+      - if owners_releases.blank?
+        &nbsp;
+      - else
+        - owners_releases.each do |release|
+          %h1
+            = release.name
+            - if release.accepted_at
+              %span.done Done
+          = RedCloth.new(release.description).to_html.html_safe
+    
+      
