--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -15,10 +15,10 @@ body
   width: 960px
   margin-left: auto
   margin-right: auto
-  
+
   font-family: helvetica, arial, sans-serif
   color: #333
-  
+
 #header
   h1
     font-size: 36px
@@ -49,12 +49,15 @@ body
       position: relative
       top: -4px
       &.done
-        background-color: yellow
+        background-color: blue
       &.overdue
         background-color: red
         color: white
       &.behind
         background-color: orange
+        color: white
+      &.on-schedule
+        background-color: green
         color: white
   h2
     color: #ccc
@@ -71,7 +74,7 @@ body
     h2
       font-size: 18px
 
-    
+
 #footer
   margin-top: 40px
   color: #aaa
